--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "newtab": "newtab.html"
   },
 
-  "content_security_policy":"script-src 'self'; object-src 'self'",
+  "content_security_policy":"script-src 'self' maxcdn.bootstrapcdn.com cdnjs.cloudflare.com code.jquery.com; object-src 'self'; style-src 'self' maxcdn.bootstrapcdn.com",
   //    "browser_action": {
 //      "default_icon": "icon.png",
 //      "default_popup": "popup.html"
