--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "newtab": "newtab.html"
   },
 
-  "content_security_policy": "script-src 'self' https://www.gstatic.com; object-src 'self'",
+  "content_security_policy": "script-src 'self' 'unsafe-eval' https://www.gstatic.com; object-src 'self'",
 
   //    "browser_action": {
 //      "default_icon": "icon.png",
